# pdf_extractor

./: .gitignore  README.md  pyproject.toml
docs/: pdf_extraction_pipeline_plan.md
src/pdf_extractor_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pdf_pipeline/: __init__.py  audit.py  confidence.py  dedup.py  deps.py  discover.py  extract.py  fallback.py  figures.py  inventory.py  metadata.py  ocr.py  quality.py  quality_eval.py  reindex.py  render_markdown.py  run_pipeline.py  tables.py  text.py  types.py  utils.py
tests/: test_audit.py  test_confidence.py  test_dedup.py  test_discover.py  test_fallback.py  test_figures.py  test_metadata_normalization.py  test_quality.py  test_quality_eval.py  test_reindex.py  test_run_pipeline.py  test_tables.py
tmp_confidence_full/: batch_report.json
tmp_confidence_full/07-aos516/: manifest.json  paper.md
tmp_confidence_full/1-s2-0-0022053179900437-main/: manifest.json  paper.md
tmp_confidence_full2/: batch_report.json
tmp_fix_breeden2/: batch_report.json
tmp_fix_check_out/: batch_report.json
tmp_fix_check_out2/: batch_report.json
tmp_fix_check_out3/: batch_report.json
tmp_fix_full/: batch_report.json
tmp_fix_full2/: batch_report.json
tmp_fix_out_only/: batch_report.json
tmp_fix_two_out/: batch_report.json
tmp_medium_fix_out/: batch_report.json
tmp_medium_full/: batch_report.json
tmp_out/: batch_report.json
tmp_quality_full/: batch_report.json  extracted_content_review_findings.json  figure_asset_scan.json  figure_reference_asset_mismatch.json  review_scan.json  review_scan_v2.json
(+496 files in other folders)
